<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reporte_titulo"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/tvContenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reporte_contenido"
            android:textSize="16sp"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/btnVolverHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volver_inicio" />
    </LinearLayout>
</ScrollView>
