<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ================= CONTENIDO LOGIN ================= -->
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center"
        android:background="#FFFFFF">

        <!-- CONTENEDOR LOGO -->
        <FrameLayout
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:background="@drawable/bg_login_gradient"
            android:layout_marginBottom="40dp"
            android:padding="24dp">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ecco360_lo0go"
                android:scaleType="fitCenter" />
        </FrameLayout>

        <!-- USUARIO -->
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/username"
            android:inputType="number"
            android:padding="12dp"
            android:textColor="#000000"
            android:textColorHint="#8A8A8A"
            android:background="@drawable/bg_edittext_login" />


        <!-- CONTRASEÑA -->
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#000000"
            android:textColorHint="#8A8A8A"
            android:background="@drawable/bg_edittext_login"
            android:layout_marginTop="16dp" />

        <!-- BOTÓN LOGIN -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/bg_button_login"
            android:layout_marginTop="28dp" />
    </LinearLayout>

    <!-- ================= LOADER MODAL CENTRADO ================= -->
    <FrameLayout
        android:id="@+id/rootModalLoader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#88000000"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/loaderGif"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:src="@drawable/loader_loading" />
    </FrameLayout>

</FrameLayout>
